# InferenceEngineering

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
docs/: phase1-guide.md  roadmap.md
docs/concepts/: attention_mechanisms_2024_2026.md  quantization_techniques.md  qwen2.5-7b-architecture.md  speculative-decoding-and-structured-generation.md  transformer_math_reference.md
docs/plans/: 2026-03-02-phase1-enrichment-design.md  2026-03-02-phase1-enrichment.md  content-playbook.md
src/engine/: __init__.py  model.py  sampler.py  tokenizer.py
tests/: test_model.py
