[project]
name = "inference-engine"
version = "0.1.0"
description = "LLM inference engine from scratch"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "safetensors",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ipykernel",
]
test = [
    "transformers",
    "accelerate",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
